# soccer_5

Four_wheel_omni-basedrive/final_control/config/: controllers.yaml
Four_wheel_omni-basedrive/final_description/meshes/: base2_link.STL  wheel_1.STL
Four_wheel_omni-basedrive/final_description/xacro/: ball.urdf.xacro  camera.urdf.xacro  main.urdf.xacro
Four_wheel_omni-basedrive/final_gazebo/launch/: final_world1.launch
Four_wheel_omni-basedrive/final_gazebo/worlds/: robocup15MSL.world
cmd_vel_auto/: CMakeLists.txt  deteksi_waktu.csv  package.xml
cmd_vel_auto/scripts/: cmd_vel_publisher.py  yolo8.py
soccer_3/: CMakeLists.txt  package.xml
soccer_3/config/: controller.yaml  joint_names_soccer_3.yaml  omni_control.yaml  pid_gains.yaml
soccer_3/launch/: display.launch  gazebo.launch
soccer_3/meshes/: base_link.STL  blwheel_Link.STL  brwheel_Link.STL  camera_Link.STL  dc1_Link.STL  dc2_Link.STL  dc3_Link.STL  dc4_Link.STL  flwheel_Link.STL  frwheel_Link.STL  penyanggakanan_Link.STL  penyanggakiri_Link.STL  pkn1_Link.STL  pkn2_Link.STL  pkn3_Link.STL  pkn4_Link.STL
soccer_3/scripts/: move_forward.py  omni_cmd_vel_effort.py
soccer_3/urdf/: soccer_3.csv  soccer_3.urdf
