<package format="2">
  <name>soccer_3</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for soccer_3. 
    This package contains configuration data, 3D models, and launch files for the soccer_3 robot.
  </description>
  <maintainer email="reza@example.com">Reza Maulana</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build & runtime dependencies -->
  <depend>roscpp</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo_ros</depend>
  <depend>controller_manager</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>effort_controllers</depend>
  <depend>joint_state_controller</depend>
  <depend>tf</depend>
  <depend>xacro</depend>
  <depend>roslaunch</depend>

  <export>
    <architecture_independent />
  </export>
</package>

